# mutasiberkas-mobile-khanza

./: .gitignore  README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/simrskhanza/berkas_rm_mobile/: MainActivity.kt
backend/: .env  Cargo.toml
backend/src/: db.rs  main.rs  models.rs
backend/src/handlers/: mod.rs  pasien.rs  picking.rs  rekammedis.rs
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/models/: patient.dart  picking_list_entry.dart
lib/pages/: archive_search_page.dart  batch_scan_page.dart  home_page.dart  picking_list_page.dart  shelf_mapping_page.dart
lib/providers/: app_provider.dart
lib/services/: api_service.dart
lib/widgets/: ocr_scanner.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
